--- a/index.html
+++ b/index.html
@@ -3,65 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fashion Showcase</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            text-align: center;
-            background-color: #f4f4f4;
-        }
-        .header {
-            background-color: #222;
-            color: white;
-            padding: 20px;
-            font-size: 24px;
-        }
-        .gallery {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-            padding: 20px;
-        }
-        .gallery img {
-            width: 300px;
-            height: auto;
-            margin: 10px;
-            border-radius: 10px;
-            box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
-        }
-        .footer {
-            margin-top: 20px;
-            padding: 20px;
-            background-color: #222;
-            color: white;
-        }
-    </style>
+    <title>Lindsay Alice</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300;400;500&family=Montserrat:wght@200;300;400&display=swap">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <div class="header">Fashion Showcase</div>
-    <div class="gallery" id="gallery">
-        <!-- Images will be added here dynamically -->
+    <div class="menu-toggle">
+        <i class="fas fa-bars"></i>
     </div>
-    <div class="footer">Scan the QR code to access this page anytime!</div>
-    
-    <script>
-        // Example fashion pieces (Replace URLs with actual images)
-        const fashionPieces = [
-            'fashion1.jpg',
-            'fashion2.jpg',
-            'fashion3.jpg',
-            'fashion4.jpg',
-        ];
 
-        const gallery = document.getElementById('gallery');
-        fashionPieces.forEach(image => {
-            let imgElement = document.createElement('img');
-            imgElement.src = image;
-            imgElement.alt = "Fashion Piece";
-            gallery.appendChild(imgElement);
-        });
-    </script>
+    <nav class="menu">
+        <ul class="menu-items">
+            <li><a href="#">New Arrivals</a></li>
+            <li><a href="#">Collections</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Contact</a></li>
+        </ul>
+    </nav>
+
+    <header class="header">
+        <h1 class="brand-name">Lindsay Alice</h1>
+    </header>
+
+    <div class="gallery" id="gallery">
+        <!-- Images will be added dynamically -->
+    </div>
+
+    <footer class="footer">
+        <div class="social-icons">
+            <a href="#" target="_blank"><i class="fab fa-instagram"></i></a>
+            <a href="#" target="_blank"><i class="fab fa-pinterest"></i></a>
+        </div>
+        <p>© 2025 Lindsay Alice. All Rights Reserved.</p>
+        <p><a href="#" style="color: #666; text-decoration: none;">Contact</a></p>
+    </footer>
+
+    <script src="js/main.js"></script>
 </body>
 </html>
